# EGG-API

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  SECURITY.md  SPECS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  desktop-package.yml  release.yml
app/: TODO.md  __main__.py  cli.py  dependencies.py  desktop.py  errors.py  http_cache.py  i18n.py  main.py  oai_provider.py  runtime_paths.py  scheduler.py  tracing.py  user_errors.py
app/adapters/: base.py  factory.py
app/adapters/elasticsearch/: adapter.py
app/adapters/opensearch/: adapter.py
app/admin_api/: imports.py  keys.py  releases.py  routes.py
app/admin_ui/: auth.py  routes.py  setup_service.py
app/admin_ui/static/: admin.css
app/admin_ui/templates/: base.html  config.html  dashboard.html  error.html  help.html  imports.html  keys.html  login.html  mapping.html  usage.html
app/admin_ui/templates/setup/: _layout.html  backend.html  done.html  exposure.html  keys.html  landing.html  mapping.html  published.html  security.html  source.html  test.html
app/auth/: api_keys.py  dependencies.py  key_service.py
app/cache/: __init__.py
app/config/: manager.py  models.py
app/importers/: __init__.py  csv_importer.py  ead.py  lido.py  marc.py  oaipmh.py
app/landing/: __init__.py  routes.py
app/landing/static/: landing.css
app/landing/templates/: about.html  index.html
app/logging/: __init__.py  request_context.py
app/mappers/: schema_mapper.py
app/metrics/: __init__.py
app/public_api/: jsonld.py  routes.py
app/query_policy/: engine.py
app/rate_limit/: limiter.py  lockout.py  redis_limiter.py
app/schemas/: errors.py  query.py  record.py
app/storage/: base.py  migrations.py  sqlite_store.py
deploy/k8s/: egg-api.yaml
docs/: adr-001-async-io-strategy.md  adr-002-compiler-separation.md  backends.md  first-launch.md  post-audit.md  signing.md
docs/site/: index.html
docs/site/assets/: site.css
examples/: config.docker.yaml  config.yaml
ops/: RUNBOOK.md
ops/grafana/: egg-api-overview.json
ops/prometheus/: alerts.yml
scripts/: locustfile.py  setup.sh
tests/: _fakes.py  conftest.py
tests/contract/: test_contract.py
tests/integration/: test_admin_api.py  test_admin_ui.py  test_public_api.py
tests/security/: test_review_fixes.py  test_security.py  test_sprint10_cleanup.py  test_sprint12_deploy.py  test_sprint13_keys_api.py  test_sprint14_wizard.py  test_sprint15_wizard_publish.py  test_sprint16_bootstrap.py  test_sprint17_desktop.py  test_sprint18_hardening.py  test_sprint19_release.py  test_sprint1_hardening.py  test_sprint20_discovery.py  test_sprint21_windows_polish.py  test_sprint22_oaipmh.py  test_sprint23_museum_iiif.py  test_sprint24_lido.py  test_sprint25_marc_csv.py  test_sprint26_ead.py  test_sprint27_scheduler_oai.py  test_sprint28_landing.py  test_sprint29_i18n.py  test_sprint29_user_journey.py  test_sprint2_hardening.py  test_sprint30_i18n_config.py  test_sprint3_concurrency.py  test_sprint4_persistence.py  test_sprint5_contract.py  test_sprint6_observability.py  test_sprint7_architecture.py  test_sprint8_features.py  test_sprint9_release.py  test_vague1_hardening.py  test_vague2_robustness.py  test_vague3_hardening.py  test_vague4_observability.py  test_vague5_spec.py
tests/snapshots/: openapi_paths.json
tests/unit/: test_cli.py  test_mapper.py  test_persistence.py  test_query_policy.py
