[project]
name = "egg-api"
version = "2.0.0"
description = "EGG-API: safe, normalized API facade for GLAM search backends"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EGG-API Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
  "jinja2>=3.1.0",
  "prometheus-client>=0.20.0",
  "structlog>=24.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "types-PyYAML>=6.0.0",
  # Backport of the stdlib ``tomllib`` (stdlib since 3.11); pulled in
  # only for 3.10 so test_sprint9_release can read pyproject.toml.
  "tomli>=2.0.1; python_version < '3.11'"
]
otel = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0"
]
redis = [
  "redis>=5.0.0"
]
desktop = [
  # Cross-platform native-window wrapper around the admin UI. Only the
  # Briefcase bundle and operators who explicitly want the tray / window
  # experience need this; the regular `egg-api run` / `egg-api start`
  # flow stays pure FastAPI.
  "pywebview>=5.0"
]

[project.scripts]
egg-api = "app.cli:main"
egg-api-desktop = "app.desktop:main"

[tool.pytest.ini_options]
# Coverage gate. Sprints 22-30 shipped the importer chain (OAI-PMH,
# LIDO, MARC, CSV, EAD), the scheduler, the outbound OAI-PMH
# provider, the landing page and the i18n stack. The overall figure
# is now a stable ~78.7 %; bumped the gate back to 78 in Sprint 30.
# A later per-package tightening (auth / policy / storage → 90 %,
# importers → 85 %) can push the global number back above 80 %.
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=78"
testpaths = ["tests"]
# Pin the repo root so ``tests._fakes`` (and any other test-shared module)
# resolves identically on every runner — the default rootdir heuristic
# is fragile under GitHub Actions / xdist.
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
# Jinja templates and static assets live inside the ``app`` package so
# they travel with the wheel and Docker image. Globs cover nested
# directories (e.g. ``admin_ui/templates/setup/*.html``) and future
# asset types (js, images) without a manifest edit.
app = [
  "admin_ui/templates/**/*.html",
  "admin_ui/static/**/*",
  "landing/templates/**/*.html",
  "landing/static/**/*",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Lint + format + type-check
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit (security)
  "SIM", # flake8-simplify
  "RUF"  # ruff-specific
]
ignore = [
  "E501",   # line too long (handled by black)
  "B008",   # function call in default argument (FastAPI pattern)
  "S101",   # use of assert (fine in tests)
  "S104",   # binding to 0.0.0.0 (allowed in container entrypoint)
  "SIM108"  # ternary rewrite (readability judgement)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B", "SIM"]
"app/cli.py" = ["S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
files = ["app"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
ignore_missing_imports = true
# Codebase is partially typed; tighten progressively.
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true


# ---------------------------------------------------------------------------
# Briefcase desktop packaging (Sprint 17)
#
# Produces a native installer per OS:
#   macOS:    .pkg  (briefcase package macOS app)
#   Windows:  .msi  (briefcase package windows MSI)
#   Linux:    .AppImage / .deb (briefcase package linux -p AppImage)
#
# The app entry point is ``app.desktop:main``, which starts uvicorn in
# a daemon thread and opens the admin UI inside a pywebview window.
# Run ``briefcase dev`` to iterate locally; ``briefcase create / build /
# package`` to produce an installer. No code signing in this sprint —
# the artefacts ship unsigned and the README flags it.
# ---------------------------------------------------------------------------

[tool.briefcase]
project_name = "EGG-API"
bundle = "org.eggapi"
version = "2.0.0"
url = "https://github.com/maribakulj/egg-api"
license.file = "LICENSE"
author = "EGG-API Contributors"
author_email = "egg-api@example.org"

[tool.briefcase.app.egg-api]
formal_name = "EGG-API"
description = "A safe, guided façade for GLAM search backends."
long_description = """
EGG-API wraps a read-only façade around Elasticsearch or OpenSearch
and exposes a normalized public API plus a guided admin wizard.
This desktop bundle runs the whole service on localhost inside a
pywebview window; the admin UI opens automatically on launch.
"""
sources = ["app"]
test_sources = ["tests"]
requires = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
  "jinja2>=3.1.0",
  "prometheus-client>=0.20.0",
  "structlog>=24.1.0",
  "pywebview>=5.0"
]

[tool.briefcase.app.egg-api.macOS]
requires = ["std-nslog>=1.0.3"]

[tool.briefcase.app.egg-api.linux]
requires = []
system_requires = [
  "libgirepository1.0-dev",
  "libcairo2-dev",
  "libpango1.0-dev",
  "libwebkit2gtk-4.1-dev",
  "gir1.2-webkit2-4.1"
]

[tool.briefcase.app.egg-api.linux.system.debian]
system_runtime_requires = [
  "gir1.2-webkit2-4.1",
  "libwebkit2gtk-4.1-0"
]

[tool.briefcase.app.egg-api.linux.appimage]
manylinux = "manylinux_2_28"
system_requires = [
  "libwebkit2gtk-4.1-dev",
  "gir1.2-webkit2-4.1"
]

[tool.briefcase.app.egg-api.windows]
# Windowed build: no attached cmd console flashes behind the
# pywebview window at launch. app/desktop.py redirects stdout /
# stderr to ``%APPDATA%\EGG-API\logs\launcher.log`` to replace the
# lost terminal output. Set EGG_DESKTOP_CONSOLE=1 to reattach stdio
# for development.
console_app = false
requires = []
